[GUI] Dark theme (wip)

--- a/WoWDatabaseEditor/WoWDatabaseEditorCore.csproj
+++ b/WoWDatabaseEditor/WoWDatabaseEditorCore.csproj
@@ -227,6 +227,9 @@
     <Page Include="Themes\Controls\WindowCommands.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\DarkTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AboutView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
