--- a/WDE.Common/WDE.Common.csproj
+++ b/WDE.Common/WDE.Common.csproj
@@ -100,6 +100,7 @@
     <Compile Include="IConfigurable.cs" />
     <Compile Include="Managers\Document.cs" />
     <Compile Include="Managers\IDocument.cs" />
+    <Compile Include="Managers\IThemeManager.cs" />
     <Compile Include="Managers\ITool.cs" />
     <Compile Include="Managers\IWindowManager.cs" />
     <Compile Include="Properties\Annotations.cs" />
