--- a/LoaderAvalonia/LoaderAvalonia.csproj
+++ b/LoaderAvalonia/LoaderAvalonia.csproj
@@ -9,7 +9,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AvaloniaStyles\AvaloniaStyles.csproj" />
-      <ProjectReference Include="..\Updater\Updater.csproj" SkipGetTargetFrameworkProperties="true" />
       <ProjectReference Include="..\WDE.AzerothCore\WDE.AzerothCore.csproj" />
       <ProjectReference Include="..\WDE.Common.Avalonia\WDE.Common.Avalonia.csproj" />
       <ProjectReference Include="..\WDE.CommonViews.Avalonia\WDE.CommonViews.Avalonia.csproj" />
@@ -23,7 +22,7 @@
       <ProjectReference Include="..\WDE.SQLEditor\WDE.SQLEditor.csproj" />
       <ProjectReference Include="..\WDE.TrinitySmartScriptEditor\WDE.TrinitySmartScriptEditor.csproj" />
       <ProjectReference Include="..\WDE.Trinity\WDE.Trinity.csproj" />
-      <ProjectReference Include="..\WDE.Updater\WDE.Updater.csproj" />
+      <ProjectReference Include="..\WDE.Updater\WDE.Updater.csproj" SkipGetTargetFrameworkProperties="true" />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.Common\WDE.Common.csproj" />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.DbcStore\WDE.DbcStore.csproj" />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.History\WDE.History.csproj" />
