--- a/LoaderWPF/LoaderWPF.csproj
+++ b/LoaderWPF/LoaderWPF.csproj
@@ -9,7 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Updater\Updater.csproj" SkipGetTargetFrameworkProperties="true" />
       <ProjectReference Include="..\WDE.AzerothCore\WDE.AzerothCore.csproj" />
       <ProjectReference Include="..\WDE.Common.WPF\WDE.Common.WPF.csproj" />
       <ProjectReference Include="..\WDE.CommonViews.WPF\WDE.CommonViews.WPF.csproj" />
@@ -26,7 +25,7 @@
       <ProjectReference Include="..\WDE.ThemeChanger\WDE.ThemeChanger.csproj" />
       <ProjectReference Include="..\WDE.TrinitySmartScriptEditor\WDE.TrinitySmartScriptEditor.csproj" />
       <ProjectReference Include="..\WDE.Trinity\WDE.Trinity.csproj" />
-      <ProjectReference Include="..\WDE.Updater\WDE.Updater.csproj" />
+      <ProjectReference Include="..\WDE.Updater\WDE.Updater.csproj" SkipGetTargetFrameworkProperties="true"  />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.Common\WDE.Common.csproj" />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.DbcStore\WDE.DbcStore.csproj" />
       <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.History\WDE.History.csproj" />
