[UX/Avalonia] Fixed macOS fonts

--- a/AvaloniaStyles/AvaloniaStyles.csproj
+++ b/AvaloniaStyles/AvaloniaStyles.csproj
@@ -18,81 +18,7 @@
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.0" />
     </ItemGroup>
     <ItemGroup>
-      <AvaloniaResource Include="Styles\BigSur\Button.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\CheckBox.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ColorsDark.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ColorsLight.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ComboBox.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ComboBoxItem.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ContextMenu.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\DataGrid.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\GridSplitter.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ListBox.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ListBoxItem.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\MenuItem.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\PopupRoot.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\RadioButton.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\SideBar.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\StatusBar.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\TabStrip.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\TextBox.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ToggleButton.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\ToolsTabControl.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\TreeView.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\TreeViewItem.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\Window.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\WindowControlButtons.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\Button.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\CheckBox.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ColorsDark.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ColorsLight.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ComboBox.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ComboBoxItem.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ContextMenu.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\GridSplitter.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ListBox.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ListBoxItem.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\MenuItem.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\PopupRoot.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\RadioButton.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\SideBar.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\StatusBar.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\TabStrip.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\TextBox.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ToggleButton.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\ToolsTabControl.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\TreeView.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\TreeViewItem.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\Window.xaml" />
-      <AvaloniaResource Include="Styles\Windows10Light.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\ColorsLight.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\ListBox.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\NativeMenuBar.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\SideBar.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\StatusBar.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\Style.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\TabStrip.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\ToolsTabControl.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\Window.xaml" />
-      <None Remove="App.xaml" />
-      <AvaloniaResource Include="App.xaml" />
-      <None Remove="Styles\BigSur\Style.xaml" />
-      <AvaloniaResource Include="Styles\BigSur\Style.xaml" />
-      <None Remove="Styles\Catalina\Style.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\Style.xaml" />
-      <None Remove="Styles\Catalina\DataGrid.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\DataGrid.xaml" />
-      <None Remove="Styles\MacOsCatalinaLight.xaml" />
-      <AvaloniaResource Include="Styles\MacOsBigSurDark.xaml" />
-      <AvaloniaResource Include="Styles\MacOsBigSurLight.xaml" />
-      <AvaloniaResource Include="Styles\MacOsCatalinaDark.xaml" />
-      <AvaloniaResource Include="Styles\MacOsCatalinaLight.xaml" />
-      <None Remove="Styles\Windows10.xaml" />
-      <None Remove="Styles\Windows10\ColorsDark.xaml" />
-      <AvaloniaResource Include="Styles\Windows10\ColorsDark.xaml" />
-      <None Remove="Styles\Catalina\WindowControlButtons.xaml" />
-      <AvaloniaResource Include="Styles\Catalina\WindowControlButtons.xaml" />
-      <None Remove="Styles\Windows10Dark.xaml" />
-      <AvaloniaResource Include="Styles\Windows10Dark.xaml" />
+      <AvaloniaResource Include="**\*.xaml" />
+      <AvaloniaResource Include="Styles\Assets\Lato\*.ttf" />
     </ItemGroup>
 </Project>
