--- a/WoWDatabaseEditor/WoWDatabaseEditorCore.csproj
+++ b/WoWDatabaseEditor/WoWDatabaseEditorCore.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\WDE.MVVM\WDE.MVVM.csproj" />
+    <ProjectReference Include="..\WDE.Solutions\WDE.Solutions.csproj" />
     <ProjectReference Include="..\WoWDatabaseEditor.Common\WDE.Common\WDE.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
